--- a/src/renderer/pages/app/app.scss
+++ b/src/renderer/pages/app/app.scss
@@ -1,7 +1,15 @@
+@import '../../assets/styles/reset.scss';
+
 html, body {
     height: 100%;
 }
 
+#root {
+    height: 100%;
+}
+
 .app {
-    color: blue;
+    height: 100%;
+    display: flex;
+    
 }
