--- a/src/renderer/components/nav/nav.scss
+++ b/src/renderer/components/nav/nav.scss
@@ -1,5 +1,66 @@
 .nav-container {
-    width: 100%;
+    flex: 15;
     height: 100%;
+    background-color: rgba(255, 255, 255, .7);
+    padding: 30px 0;
+    box-sizing: border-box;
 
+    .user-portrait {
+        
+
+        .portrait-pic {
+            display: flex;
+            width: 69px;
+            height: 69px;
+            border-radius: 50%;
+            padding: 8px;
+            background-color: #ffffff;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+            box-shadow: 0 10px 50px #c1c1c1;
+
+            img {
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+            }
+        }
+
+        .user-name {
+            position: relative;
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            color: #333333;
+            margin-top: 25px;
+            padding: 0 20px;
+            box-sizing: border-box;
+            cursor: pointer;
+
+            .name-text {
+                width: calc(100% - 20px);
+                text-align: center;
+                display: inline-block;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                font-weight: 400;
+            }
+
+            >i {
+                display: inline-block;
+                font-weight: bold;
+                transform: rotateZ(0deg);
+                transition: all .2s ease;
+            }
+
+            &.closed {
+                >i {
+                    transform: rotateZ(-90deg);
+                }
+            }
+        }
+    }
 }
