--- a/src/renderer/pages/app/app.scss
+++ b/src/renderer/pages/app/app.scss
@@ -2,14 +2,23 @@
 
 html, body {
     height: 100%;
+    background: linear-gradient(45deg, #684cd3, #fab6bc);
 }
 
 #root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
 }
 
 .app {
-    height: 100%;
+    width: 1366px;
+    height: 768px;
     display: flex;
-    
+    background-color: transparent;
+
+    .main-content {
+        flex: 85;
+    }
 }
